fix faces demo in ie6 (overflow/relative), add in ability to link to #hash of family name. move "external demos" out into json file and make demos.php index parse that
also remove "stalk" link from skew demo.
add DND demo to ext-demos.json
add faces thumbnail



git-svn-id: http://svn.dojotoolkit.org/src/demos/trunk@16865 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/faces/demo.css
+++ b/faces/demo.css
@@ -80,6 +80,7 @@
 		padding:15px;
 		border:1px solid #ededed;
 		background:#fff;
+		position:relative;
 	}
 	.clan li.thumbnail { float:left; padding-right:7px; }
 	.clan ul { 
@@ -116,3 +117,10 @@
 		background:#DFE8EE;
 	}
 	
+	h2 a { text-decoration:none; color:#455058; cursor:pointer; margin-bottom:8px; }
+	h2 a:link { text-decoration:none; color:#455058; }
+	h2 a:visited { text-decoration:none; color:#455058; }
+	h2 a:hover { text-decoration:none; color:#000; }
+	h2 a:active { color:#000; }
+	
+	.clan ul { margin-top:4px; }
